--- a/Amazeriffic/style.css
+++ b/Amazeriffic/style.css
@@ -12,3 +12,10 @@ header,
 main {
     background: white;
 }
+
+header .container,
+main .container,
+footer .container {
+    max-width: 855px;
+    margin: auto;
+}
