added floats to the image and the footer classes

--- a/Amazeriffic/style.css
+++ b/Amazeriffic/style.css
@@ -8,9 +8,23 @@ footer {
     min-width: 855px;
 }
 
-header,
 main {
     background: white;
+}
+
+header {
+    background: white;
+    overflow: auto;
+}
+
+header h1 {
+    float: left;
+    width: 570px;
+}
+
+header nav {
+    float: right;
+    width: 285px;
 }
 
 header .container,
@@ -18,4 +32,25 @@ main .container,
 footer .container {
     max-width: 855px;
     margin: auto;
+    overflow: auto;
+}
+
+main .description {
+    float: left;
+    width: 570px;
+}
+
+main .image {
+    float: right;
+    width: 285px;
+}
+
+footer .contact {
+    float: left;
+    width: 570px;
+}
+
+footer .sitemap {
+    float: right;
+    width: 285px;
 }
